gap fixed

--- a/src/Movies/Movies.css
+++ b/src/Movies/Movies.css
@@ -83,7 +83,7 @@ img {
 }
 
 .col-movie {
-    gap: 5px;
+    gap: 1%;
     /* width: 100%; */
     display: flex;
     flex-direction: row;
